--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "eslint": "^4.6.0",
     "express": "^4.15.4",
     "joi": "^10.6.0",
+    "jsonwebtoken": "^8.0.0",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "sequelize": "^4.8.0",
