--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "vue-youtube-embed": "^2.1.2",
     "vuetify": "^0.15.2",
     "vuex": "^2.4.0",
+    "vuex-persistedstate": "^2.0.0",
     "vuex-router-sync": "^4.3.1"
   },
   "devDependencies": {
